--- a/src/app/main/contract-signature/components/consider-contract/cert-dialog-sign/cert-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/cert-dialog-sign/cert-dialog-sign.component.html
@@ -7,7 +7,7 @@
     <h3 class="label-header">{{'sign_cert_title' | translate}}</h3>
   </div>
 
-  <div class="row" style="padding-top: 20px;" *ngIf="!this.mobile">
+  <div class="row" style="padding-top: 20px; height: 400px; overflow-y: scroll;" *ngIf="!this.mobile">
     <p-table id="table" [value]="list">
       <ng-template pTemplate="header" let-columns>
         <tr>
