--- a/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
@@ -14,7 +14,7 @@
         
             <div class="contract-name">
                 <div class="label-input">Từ khóa tìm kiếm&nbsp;</div>
-                <div class="input-data-name"><input type="text border" [readonly]="this.action == 'openDetail'" [(ngModel)]="filter_name" placeholder="Tìm kiếm"></div>
+                <div class="input-data-name"><input type="text border" [readonly]="this.action == 'openDetail'" [(ngModel)]="filter_name" placeholder="Tìm kiếm theo tên hợp đồng"></div>
               </div>
             <div class="contract-button">
                 <div class="label-input">&nbsp;</div>
