--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -42,7 +42,7 @@
 
                             <div class="row">
                                 <div class="item_contract_infor">{{'contract.status' | translate}}:
-                                    <span class="status_blue">{{item.filter_status | pipe | translate}}
+                                    <span class="status_blue">{{item.status | pipe | translate}}
                                         {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                         translate}}</span>
                                 </div>
