--- a/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
+++ b/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
@@ -74,7 +74,7 @@
 
             <tr *ngFor="let data of list.data">
               <td>{{data.name}}</td>
-              <td>{{ data.na ? data.na : data.quantity}}</td>
+              <td style="font-weight: bold;">{{ data.na ? data.na : data.quantity}}</td>
             </tr>
             
         </ng-template>
