--- a/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
+++ b/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <!--Trạng thái hợp đồng -->
-    <div class="col-md-2">
+    <!-- <div class="col-md-2">
       <div>{{'contract.status.v2' | translate}}</div>
       <div class="input-line">
           <p-dropdown
@@ -34,7 +34,7 @@
               [autoDisplayFirst]="false"
           ></p-dropdown>
       </div>
-  </div>
+    </div> -->
 
     <!--Thời gian gửi-->
     <div class="col-md-2">
@@ -84,6 +84,11 @@
             <td>{{convertTime(list.createDate)}}</td> <!--Thời gian gửi-->
             <td [ngStyle]="{color: list.status == 'Thành công' ? 'green' : 'red'}" style="text-align: center; ">
               {{list.status}}</td> <!--Trạng thái gửi-->
+            <td *ngIf="list.contractStatus == 20">{{'sys.processing' | translate}}</td>
+            <td *ngIf="list.contractStatus == 2">{{'contract.status.overdue' | translate}}</td>
+            <td *ngIf="list.contractStatus == 31">{{'contract.status.fail' | translate}}</td>
+            <td *ngIf="list.contractStatus == 32">{{'contract.status.cancel' | translate}}</td>
+            <td *ngIf="list.contractStatus == 30">{{'contract.status.complete' | translate}}</td>
           </ng-container>
         </tr>
       </ng-template>
