fix thêm hợp đồng trong thư mục

--- a/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
@@ -85,7 +85,7 @@
                             <div class="div_icon">
                                 <div class="col-md-1 calendar_create">
                                     <div>
-                                        <input name="item" type="checkbox" value="{{item.contractId}}" (change)="selectContract(item.id)" />
+                                        <input [(ngModel)]="item.checked" name="item" type="checkbox" value="{{item.contractId}}" (change)="selectContract(item)" />
                                     </div>
                                 </div>
                             </div>
