--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -1,3 +1,9 @@
+<div>
+    <button (click)="back()">
+        
+    </button>
+    <span style="color: black;">></span>&nbsp;&nbsp;<span>{{this.title}}</span>
+</div>
 <div class="col-md-4" class="container-fluid">
     <ng-template [ngIf]="isOrg">
         <div class="col-md-12" style="padding-top: 20px;">
