--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -27,7 +27,7 @@
             <div class="col-md-3">{{'action' | translate}}</div>
         </div>
 
-        <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
+        <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal, id: 'p'}">
             <div class="row">
                 <!--Cột 1-->
                 <div class="col-md-4">
@@ -95,7 +95,7 @@
         <div class="contract_footer">
             <div class="footer_title"></div>
             <div class="footer_pagination">
-                <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+                <pagination-controls id="p" *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
             </div>
             <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} 
             </div>
