nút back thư mục

--- a/src/app/main/contract-folder/current-folder/current-folder.component.scss
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.scss
@@ -172,3 +172,16 @@
   .img_icon:hover{
     width: 30px;
   }
+
+  .icon-button {
+    // background-color: #007bff;
+    // color: white;
+    border: none;
+    // padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .icon-button:hover {
+    background-color: #0056b3;
+  }
