--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -1,8 +1,8 @@
-<div>
-    <button (click)="back()">
-        
+<div class="col-md-4" class="container-fluid">
+    <button class="icon-button" (click)="back()">
+        <i class="fa fa-home" aria-hidden="true"></i>
     </button>
-    <span style="color: black;">></span>&nbsp;&nbsp;<span>{{this.title}}</span>
+    &nbsp;&nbsp;<span style="color: black;">></span>&nbsp;&nbsp;<span>{{this.title}}</span>
 </div>
 <div class="col-md-4" class="container-fluid">
     <ng-template [ngIf]="isOrg">
