--- a/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
+++ b/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
@@ -84,11 +84,11 @@
             <td>{{convertTime(list.createDate)}}</td> <!--Thời gian gửi-->
             <td [ngStyle]="{color: list.status == 'Thành công' ? 'green' : 'red'}" style="text-align: center; ">
               {{list.status}}</td> <!--Trạng thái gửi-->
-            <td *ngIf="list.contractStatus == 20">{{'sys.processing' | translate}}</td>
-            <td *ngIf="list.contractStatus == 2">{{'contract.status.overdue' | translate}}</td>
-            <td *ngIf="list.contractStatus == 31">{{'contract.status.fail' | translate}}</td>
-            <td *ngIf="list.contractStatus == 32">{{'contract.status.cancel' | translate}}</td>
-            <td *ngIf="list.contractStatus == 30">{{'contract.status.complete' | translate}}</td>
+            <td *ngIf="list.contractStatus == 20" style="text-align: center;">{{'sys.processing' | translate}}</td>
+            <td *ngIf="list.contractStatus == 2" style="text-align: center;">{{'contract.status.overdue' | translate}}</td>
+            <td *ngIf="list.contractStatus == 31" style="text-align: center;">{{'contract.status.fail' | translate}}</td>
+            <td *ngIf="list.contractStatus == 32" style="text-align: center;">{{'contract.status.cancel' | translate}}</td>
+            <td *ngIf="list.contractStatus == 30" style="text-align: center;">{{'contract.status.complete' | translate}}</td>
           </ng-container>
         </tr>
       </ng-template>
