--- a/src/app/main/customer/customer-add/customer-add.component.html
+++ b/src/app/main/customer/customer-add/customer-add.component.html
@@ -562,6 +562,19 @@
                           </div>
                         </div>
                       </div>
+
+                      <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là chứng thư số-->
+                      <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
+                        <div class="participants__name" style="width: 88%">
+                            <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;
+                              <span class="required-title">*</span>
+                              <div style="color: #ffc107;">({{'info.cert' | translate}})</div>
+                            </div>
+                            <div class="input-data">
+                              <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                            </div>
+                        </div>
+                      </div>
       
                     </div>
 
@@ -779,6 +792,19 @@
                             <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="d.card_id"
                               oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                           </div>
+                        </div>
+                      </div>
+
+                      <!--trường hiển thị khi văn thư tổ chức của tôi chọn loại ký là chứng thư số-->
+                      <div class="participants--input" style="display: flex" *ngIf="getDataSignCert(d).length > 0">
+                        <div class="participants__name" style="width: 88%">
+                            <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;
+                                <span class="required-title">*</span>
+                                <div style="color: #ffc107;">({{'info.cert' | translate}})</div>
+                            </div>
+                            <div class="input-data">
+                              <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                            </div>
                         </div>
                       </div>
       
