--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -20,7 +20,7 @@
           <span class="title-contract">{{'contract.number' | translate}}:</span>
           <span>{{datas.is_data_contract.contract_no}}</span>
         </div>
-        <div style="overflow: auto; max-height: 150px;"> 
+        <div style="overflow: auto; max-height: 150px;">
           <span class="title-contract">{{'file.attach' | translate}}:</span>
           <span *ngFor="let d of allFileAttachment;let i = index">
             <span *ngIf="i != 0">, </span>
@@ -69,6 +69,19 @@
   <!--  width: 74.7%-->
   <div (scroll)="scroll($event)" id="pdf-full" *ngIf="!this.mobile" class="col-md-9 sample-contract__file viewer-pdf isDrag"
        style="background-color: #F2F2F2; position: relative;">
+       <div style="width: 100%;">
+        <img src="../../assets/img/icons8-plus.svg" style="margin-bottom:3px" (click)="zoomIn();" />
+        <!-- <button (click)="zoomIn()">+</button> -->
+        <input class="input-web" type="text" style="width: 50px;" [value]="defaultValue">
+        <img src="../../assets/img/minus-svgrepo-com.svg" style="margin-bottom:3px; height: 25px; width: 30px;" (click)="zoomOut();" />
+        <!-- <button (click)="zoomOut()">-</button> -->
+        <!-- <pdf-viewer
+          [src]="this.pdfSrc"
+          [render-text]="true"
+          [zoom]="pdfZoom"
+          style="display: block;"
+        ></pdf-viewer> -->
+      </div>
     <div id="pdf-viewer-step-3">
     </div>
   </div>
@@ -111,7 +124,7 @@
 
     <a *ngIf="role || this.status == 30" style="position: absolute; right: 5px;">
       <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
-      <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4">{{checkStatusUser(status, role) | translate}}</button>      
+      <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4">{{checkStatusUser(status, role) | translate}}</button>
     </a>
   </div>
 
@@ -123,7 +136,7 @@
   </div>
   <div class="col-md-9">
       <div *ngIf="!this.mobile" class="center" style="margin-top: 5px;">
-        
+
         <a style="text-align: center">
           <button class="call-page" (click)="firstPage()">
             <img  width="16px" height="20px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
@@ -133,13 +146,13 @@
             <img width="12px" height="16px" *ngIf="this.page1" src="assets/img/firstpagebold.svg">
             <img width="12px" height="16px" *ngIf="!this.page1" src="assets/img/previous.svg">
           </button>
-    
+
           <input class="input-web" [(ngModel)]="pageNum" type="text" (keyup.enter)="onEnter($event)" />&nbsp;/ &nbsp;{{this.pageNumber}}
           <button class="call-page1" (click)="onNextPage()" id="prev">
             <img width="12px" height="16px" *ngIf="this.pageLast" src="assets/img/next.svg">
             <img width="12px" height="16px" *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
           </button>
-    
+
           <button class="call-page1" (click)="lastPage()" id="prev">
             <img width="16px" height="20px" *ngIf="this.pageLast" src="assets/img/lastpage.svg">
             <img width="16px" height="20px" *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
@@ -148,8 +161,8 @@
 
           <a *ngIf="role || this.status == 30" style="position: absolute; right: 5px;">
             <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
-            <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4 " (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button> 
-            <button  type="button" name="next" class="next action-button" (click)="endContract()">{{'end' | translate}}</button>     
+            <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4 " (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
+            <button  type="button" name="next" class="next action-button" (click)="endContract()">{{'end' | translate}}</button>
           </a>
 
           <a *ngIf="!role && this.status != 30" style="position: absolute; right: 5px;">
