--- a/src/app/main/contract/dialog/filter-list-dialog/filter-list-dialog.component.html
+++ b/src/app/main/contract/dialog/filter-list-dialog/filter-list-dialog.component.html
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="row" style="padding-top: 10px;" *ngIf="isOrg=='on'">
+        <div class="row" style="padding-top: 10px;" *ngIf="isOrg=='on' && this.isQLHD_03">
             <div class="col-md-12">
                 <div class="label text-color">{{'menu.organization.list' | translate}}</div>
                 <div>
