--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -106,13 +106,16 @@
                 <div style="color: #94A7C6;">{{'no.data' | translate}}</div>
               </div>
             </div>
-            <div *ngIf="totalCreate > 0" >
+            <div *ngIf="totalCreate > 0  && (this.isOrg == 'off' || (this.isOrg == 'on' && (this.isQLHD_03 || this.isQLHD_04)))" >
               <div [chart]="chartCreated"></div>
               <div style="text-align: center;">{{'chart.contract.created' | translate}}</div>
             </div>
+
+            <div *ngIf="totalCreate > 0  && (this.isOrg == 'on' && !this.isQLHD_03 && !this.isQLHD_04)">
+              {{'list.org.not.permission' | translate}}
+            </div>
           </div>
         </div>
-
       </div>
     </div>
     <div class="col-md-6">
@@ -189,10 +192,7 @@
           </div>
         </div>
         <div class="second-col">
-
         </div>
-
-
       </div>
     </div>
   </div>
