--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.scss
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.scss
@@ -351,18 +351,18 @@
 .call-page1 {
   padding: 0;
   border: none;
-  background: none; 
+  background: none;
   margin-left: 5px
 }
 
 .input1 {
-  box-sizing: border-box; 
-  text-align: center; 
+  box-sizing: border-box;
+  text-align: center;
   width: 40px;
   height: 22px;
   background: #FFFFFF;
   border: 1px solid #87CAFF;
-  border-radius: 5px; 
+  border-radius: 5px;
 }
 
 .text-ellipsis {
@@ -371,4 +371,14 @@
   overflow: hidden;
   width: inherit;
   max-width: 106px;
+}
+
+.input-web {
+  box-sizing: border-box;
+  text-align: center;
+  width: 40px;
+  height: 22px;
+  background: #FFFFFF;
+  border: 1px solid #87CAFF;
+  border-radius: 5px;
 }
